[gd_scene load_steps=3 format=3 uid="uid://bxym061br3uj0"]

[ext_resource type="Script" uid="uid://bwif1vigtvqau" path="res://Code/Base_need_refill/need_refill_station.gd" id="1_rcm7o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svfd6"]
size = Vector2(128, 73.5)

[node name="NeedRefillStation" type="Area2D" groups=["NeedRefill"]]
script = ExtResource("1_rcm7o")
need_refilled = "Sleep"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_svfd6")

[node name="NeedFillInterval" type="Timer" parent="."]

[node name="ActionCompletionTime" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="NeedFillInterval" to="." method="_on_need_fill_interval_timeout"]
[connection signal="timeout" from="ActionCompletionTime" to="." method="_on_action_completion_time_timeout"]
